@@ -19,7 +19,6 @@ package org.apache.kafka.controller;
 
 import org.apache.kafka.server.common.ApiMessageAndVersion;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
@@ -76,7 +75,7 @@ class ControllerResult<T> {
     }
 
     public ControllerResult<T> withoutRecords() {
-        return new ControllerResult<>(Collections.emptyList(), response, false);
+        return new ControllerResult<>(List.of(), response, false);
     }
 
     public static <T> ControllerResult<T> atomicOf(List<ApiMessageAndVersion> records, T response) {
